charts/deepref/tests/kyverno/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deepref-immutable-images
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: deepref-test-immutable-images
    rule: require-digest
    resource: immutable-pod
    kind: Pod
    result: pass
  - policy: deepref-test-immutable-images
    rule: require-digest
    resource: mutable-pod
    kind: Pod
    result: fail
